Endpoints and ID pane